--- a/web/css/site.css
+++ b/web/css/site.css
@@ -52,7 +52,9 @@
     background-color: #2B454E;
     border-color:  #2B454E;
 }
-
+.text-1medrem{
+    font-size: 1.5rem;
+}
 /* FIN PRINCIPALES CLASES*/ 
 
 
@@ -96,6 +98,7 @@ body {
 .content-site {
     flex: 1;
     padding: 70px 25px 190px 50px;
+   
 }
 /* FIN LAYOPUT*/
 
@@ -176,6 +179,7 @@ body {
     border-radius: 20px;
     border-color: #2B454E;    
     padding: 5px 15px;
+    font-size: 1.5rem;
 }
 /* FIN PAGE INICIO */
 
@@ -183,8 +187,7 @@ body {
 
 
 
-.row-turismo{
-    border: 1px solid red;
+.row-turismo{   
     border-radius: 12px;
     box-shadow: 0px 0px 4px 4px rgba(0,0,0,0.1),0px 8px 10px -3px rgba(0,0,0,0.1)    ;
     margin-top: 5px;
@@ -288,7 +291,7 @@ a.desc:after {
 
 
 .scroll-column {     
-   overflow-y: scroll;
+   overflow-y: auto;
    max-height: 550px;
  }
 
@@ -437,26 +440,92 @@ a.desc:after {
 .contascroollsiteiner::-webkit-scrollbar-track:active {
   background: #d4d4d4;
 }*/
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: #411ad1 #ffffff;
+  }
 
-::-webkit-scrollbar{
-    width: 10px;
-    background-color: #F5F5F5;
-}
-::-webkit-scrollbar-track{
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    background-color: #F5F5F5;
-}
-::-webkit-scrollbar-thumb{
-    background-color: #F90; 
-    background-image: -webkit-linear-gradient(90deg,rgba(255, 255, 255, .2) 25%,transparent 25%,transparent 50%,rgba(255, 255, 255, .2) 50%,rgba(255, 255, 255, .2) 75%,transparent 75%,transparent)
-}
-::-webkit-scrollbar-thumb:vertical
-{
-  border-top: solid 2px rgba(33,33,33,0.5);
-  border-bottom: solid 2px rgba(33,33,33,0.5);
-}
+  /* Chrome, Edge, and Safari */
+  .scroll-column::-webkit-scrollbar {
+    width: 6px;
+  }
+
+  .scroll-column::-webkit-scrollbar-track {
+    background: #ffffff;
+  }
+
+  .scroll-column::-webkit-scrollbar-thumb {
+    background-color: #2B454E;
+    border-radius: 10px;
+    border: 1px none #ffffff;
+  }
 
 
 .list-institucional > li{
     margin: 5px 5px; 
+}
+
+
+.h-divider {
+  margin: auto;
+  margin-top: 8px;
+  width: 80%;
+  position: relative;
+}
+
+.h-divider .shadow {
+  overflow: hidden;
+  height: 20px;
+}
+
+.h-divider .shadow:after {
+  content: '';
+  display: block;
+  margin: -25px auto 0;
+  width: 100%;
+  height: 25px;
+  border-radius: 125px/12px;
+  box-shadow: 0 0 8px black;
+}
+.divider {
+  position: relative;
+  border-bottom: 5px solid #f0f0f0;
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
+
+
+.divider:before {
+  position: absolute;
+  content: '';
+  width: 30px;
+  height: 30px;
+  border: 1px solid #f0f0f0;
+  left: 50%;
+  margin-left: -15px;
+  top: 50%;
+  background: #fff;
+  margin-top: -15px;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+ .divider:after {
+  position: absolute;
+  content: '';
+  width: 20px;
+  height: 20px;
+  border: 1px solid #2ca5b9;
+  left: 50%;
+  margin-left: -10px;
+  top: 50%;
+  background: #2ca5b9;
+  margin-top: -10px;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
