--- a/web/css/site.css
+++ b/web/css/site.css
@@ -1,4 +1,3 @@
-/* fonts */
 @font-face {
     font-family: 'Overpass';
     src: url('/fonts/overpass/Overpass-Regular.ttf') format('truetype');
@@ -16,7 +15,7 @@
     font-family: 'OverpassBold';
     src: url('/fonts/overpass/Overpass-Bold.ttf') format('truetype');
     font-style: normal;
-    font-weight: normal;
+    font-weight: bold;
 }
 @font-face {
     font-family: 'OverpassExtraBold';
@@ -30,7 +29,10 @@
     font-style: normal;
     font-weight: bold;
 }
-/* FIN fonts */ 
+
+
+
+
 
 /* PRINCIPALES CLASES*/ 
 .text-overpassbold{
@@ -55,34 +57,18 @@
 .text-1medrem{
     font-size: 1.5rem;
 }
+
+.carousel-control-prev-icon {
+ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='2B454E' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+}
+
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='2B454E' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
+}
+
 /* FIN PRINCIPALES CLASES*/ 
 
 
-/* INICIO DEL FOTTER */
-.colfooterleft{
-    padding-top: 70px;
-    padding-left: 30px;
-    padding-bottom: 10px;
-}
-.colfooterright{
-    padding-top: 90px;
-    padding-right: 30px;
-    padding-bottom: 10px;
-    
-}
-footer {
-    background-image: url("/images/pie.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center top;
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    width: 100%;
-    padding: 25px 50px;
-}
-/* FIN DEL FOTTER */
 /* LAYOUT */
 body {
     font-family: 'Overpass';
@@ -98,12 +84,14 @@ body {
 .content-site {
     flex: 1;
     padding: 70px 25px 190px 50px;
-   
+   max-width: calc(100vw - 200px);
 }
-/* FIN LAYOPUT*/
+/* FIN LAYOUT*/
+
 
 
 /* MENU */
+
 #enl-home-page{
     background-image: radial-gradient(circle at 33.19% 51.47%, #84fff3 0, #67faf2 25%, #3cf2f2 50%, #00eaf3 75%, #00e2f5 100%);
     height: 25px;
@@ -112,12 +100,11 @@ body {
 }
 .nav-item > a{
     font-family: 'OverpassBold';
-    font-weight: bold;
     text-transform: uppercase;
     color: #2B454E;
     font-size: 1.15rem;
 }
-.nav-item >a.active {
+.nav-item > a.active {
     background-color: #2B454E;
     border-radius: 12px 12px 0px 0px;
     color: #fff;
@@ -126,7 +113,6 @@ body {
     border-radius: 10px 10px 0px 0px;
     color: #fff !important;
 }
-
 #btn-inicio-session{
     text-transform: uppercase;
     background-color: #2B454E;
@@ -142,18 +128,81 @@ body {
     border-bottom-left-radius: 50px;
     border-color: #2B454E;
 }
-
 .nav > li > form > button.logout:focus,
 .nav > li > form > button.logout:hover {
  text-decoration: none;
  color: rgba(255, 255, 255, 0.75);
 }
-
 .nav > li > form > button.logout:focus {
  outline: none;
 }
 
-/* FIN DEL MENu */
+.nav-item .dropdown-menu .dropdown-item {
+    font-family: 'OverpassBold';
+    display: block;
+    width: 100%;
+    padding: 0.25rem 1.5rem;
+    clear: both;
+    font-weight: 400;
+    color: #2B454E;
+    text-align: inherit;
+    white-space: nowrap;
+    background-color: transparent;
+    border: 0;
+}
+
+@media (min-width: 992px){
+.navbar-expand-lg .navbar-nav .nav-link {
+    padding-right: 1rem;
+    padding-left: 1rem;
+}
+
+}
+/* FIN DEL MENU */
+
+/* INICIO DEL FOTTER */
+.colfooterleft{
+    
+}
+.colfooterright{
+  text-align: right; 
+    
+}
+footer {
+    background-image: url("/images/pie.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center top;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    padding: 125px 50px 30px 50px;
+    z-index: 1000;
+}
+
+
+@media (max-width: 576px){
+footer {
+    background-image: none;
+    position: relative;
+    width: 100%;
+    padding: 10px;
+    background-color: #86CDBF;
+    z-index: 1000;
+}
+.colfooterright {
+    text-align: left;
+}
+}
+/* FIN DEL FOTTER */
+
+
+
+
+
+
 
 /* page inicio */
 .bodyinicio{
@@ -223,50 +272,6 @@ main > .container {
 
 
 
-/* yii2 */
-/* add sorting icons to gridview sort links */
-a.asc:after, a.desc:after {
-    content: '';
-    left: 3px;
-    display: inline-block;
-    width: 0;
-    height: 0;
-    border: solid 5px transparent;
-    margin: 4px 4px 2px 4px;
-    background: transparent;
-}
-
-a.asc:after {
-    border-bottom: solid 7px #212529;
-    border-top-width: 0;
-}
-
-a.desc:after {
-    border-top: solid 7px #212529;
-    border-bottom-width: 0;
-}
-
-.grid-view th {
-    white-space: nowrap;
-}
-
-.hint-block {
-    display: block;
-    margin-top: 5px;
-    color: #999;
-}
-
-.error-summary {
-    color: #a94442;
-    background: #fdf7f7;
-    border-left: 3px solid #eed3d7;
-    padding: 10px 20px;
-    margin: 0 0 15px 0;
-}
-/* FIN yii2 *
-/* align the logout "link" (button in form) of the navbar */
-
-
 
 /*
 
@@ -293,6 +298,7 @@ a.desc:after {
 .scroll-column {     
    overflow-y: auto;
    max-height: 550px;
+   padding: 2rem;
  }
 
  
